--- a/src/app/signup/styles.module.css
+++ b/src/app/signup/styles.module.css
@@ -2,6 +2,32 @@
 
 
 
+.lody{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo{
+    position: absolute;
+    top: 22px;
+    left: 22px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo img{
+    width: 48px;
+}
+
+.logo a{
+    font-size: 24px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #464646;
+}
 .container{
     width: 440px;
     padding: 40px 32px;
