--- a/src/app/components/Header.css
+++ b/src/app/components/Header.css
@@ -1,11 +1,12 @@
 /* Header Styles */
 .header {
+
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
   background-color: #343a40;
-  color: white;
+  color:  rgb(252, 250, 250);
 }
 
 .logo {
