--- a/src/app/healthcare/styles/NavbarWrapper.module.css
+++ b/src/app/healthcare/styles/NavbarWrapper.module.css
@@ -11,19 +11,28 @@
     box-sizing: border-box;
 }
 
-/* Local class for header content */
 .headerContent {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 15px 20px;  /* Reduced padding */
-    align-items: center;  /* Ensures logo and navbar are vertically centered */
-    margin-top: 0px;
-}
-
-/* Optional: Media query for smaller screens */
-@media (max-width: 1024px) {
+    padding: 15px 20px;
+    align-items: center;
+    margin-top: 0;
+  }
+  
+  /* Adjustments for larger screens */
+  @media (min-width: 1200px) {
     .headerContent {
-        padding: 10px 15px;  /* Reduce padding on smaller screens if needed */
+      padding: 20px 30px; /* Increase padding for larger screens */
     }
-}
+  }
+  
+  /* Adjustments for smaller screens */
+  @media (max-width: 768px) {
+    .headerContent {
+      flex-direction: column; /* Stack the logo and navigation vertically */
+      align-items: center; /* Center-align logo and navigation */
+      padding: 10px 15px; /* Reduce padding */
+    }
+  }
+  
